--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
     "@reduxjs/toolkit": "^2.5.1",
     "@shadcn/ui": "^0.0.4",
     "@tailwindcss/vite": "^4.0.6",
+    "chart.js": "^4.4.8",
     "framer-motion": "^12.4.4",
     "lucide-react": "^0.475.0",
     "react": "^19.0.0",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
     "react-redux": "^9.2.0",
