--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "@tailwindcss/vite": "^4.0.6",
     "chart.js": "^4.4.8",
     "framer-motion": "^12.4.4",
+    "jspdf": "^3.0.1",
+    "jspdf-autotable": "^5.0.2",
     "lucide-react": "^0.475.0",
     "react": "^19.0.0",
     "react-chartjs-2": "^5.3.0",
@@ -30,6 +32,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.19.0",
+    "@types/jspdf": "^2.0.0",
     "@types/react": "^19.0.8",
     "@types/react-dom": "^19.0.3",
     "@types/react-redux": "^7.1.34",
